--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,15 @@
+
+body{
+	display: flex;
+	flex-direction: column;
+
+}
+
 .pitch-area{
 	background-color: #F6FFF8;
+	flex-grow: 1;
+	
+//	background-color: blue;
 //	width: 100%;
 //	height: 100%;
 //	min-height: 100%;
@@ -7,18 +17,24 @@
 //	flex-direction: column;
 	flex-direction: row;
 	justify-content: space-around;
+
+//	align-items: stretch;
+	flex-wrap: wrap;
+	
 }
 
 .pitch-container{
-	height: 300px;
+//	height: 300px;
+ 	flex: 1 0 28%;
+	min-width: 400px;
 	background-color: #DBF2D0;
 	border-width:2px;
 	border-color: #d0e5c5;
 	border-style: solid;
 	display: inline-block;
-	width: 500px;
+//	max-width: 500px;
 	margin: 5px;
-	height: 300px;
+//	height: 300px;
 }
 .pitch{
 	background-color: red;
