--- a/public/style.css
+++ b/public/style.css
@@ -2,29 +2,28 @@
 body{
 	display: flex;
 	flex-direction: column;
+	align-items: stretch;
 
 }
+.active{
+	background-color: red;
 
+}
 .pitch-area{
 	background-color: #F6FFF8;
 	flex-grow: 1;
 	
-//	background-color: blue;
-//	width: 100%;
-//	height: 100%;
-//	min-height: 100%;
 	display: flex;
-//	flex-direction: column;
 	flex-direction: row;
 	justify-content: space-around;
-
-//	align-items: stretch;
-	flex-wrap: wrap;
 	
+	align-items: stretch;
+	flex-wrap: wrap;
+	align-self: stretch;	
 }
 
 .pitch-container{
-//	height: 300px;
+	align-self: stretch;
  	flex: 1 0 28%;
 	min-width: 400px;
 	background-color: #DBF2D0;
@@ -32,9 +31,7 @@ body{
 	border-color: #d0e5c5;
 	border-style: solid;
 	display: inline-block;
-//	max-width: 500px;
 	margin: 5px;
-//	height: 300px;
 }
 .pitch{
 	background-color: red;
