--- a/public/box.css
+++ b/public/box.css
@@ -49,6 +49,7 @@ body {
     color: #FFFFFF;
     border-radius: 30px;
     padding: 3px 10px;
+    margin-right: 5px;
 }
 
 .pitcher-name {
@@ -63,6 +64,7 @@ body {
     border-radius: 30px;
     padding: 5px 10px 5px 5px;
     margin: 3px;
+    display: flex;
 }
 
 .pitch-in-button {
