--- a/public/style.css
+++ b/public/style.css
@@ -6,10 +6,9 @@ body{
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
-
 }
 .active{
-	background-color: red;
+	background-color: #74D38F;
 
 }
 .pitch-area{
@@ -36,6 +35,7 @@ body{
 	border-style: solid;
 	display: inline-block;
 	margin: 5px;
+	min-height: 80vh; 
 }
 .pitch{
 	background-color: red;
