--- a/public/header_style.css
+++ b/public/header_style.css
@@ -44,18 +44,22 @@ ul {
   font-size: 18px;
 	font-family: 'Pragati Narrow', sans-serif;
 	margin: 0px;
-	background-color: #DBF2D0;
+	background-color: #F6FFF8;
+}
+
+
+.navitem p{
+	padding-top 10px;
 }
 
 .navlist {
 	display: flex;
 	flex-direction: row;
 	margin-right: 0px;
-	background-color: #DBF2D0;
+	background-color: #F6FFF8;
 	/*padding-top: 10px;*/
 	/*padding-bottom: 10px;*/
 }
-
 .navitem {
 	display: inline-block;
 	text-decoration: none;
@@ -68,20 +72,31 @@ ul {
 	font-size: 18px;
 }
 
+#add_charge {
+	color: #354440;
+	background-color: #98F2E0;
+	height: 35px;
+	width: 70px;
+	border-radius: 50px;
+	border: 1px solid #98F2E0;
+	font-size: 10px;
+}
+
 button {
 	color: #354440;
 	background-color: #98F2E0;
-	height: 25px;
-	width: 50px;
+	height: 30px;
+	width: 30px;
 	border-radius: 50%;
 	border: 1px solid #98F2E0;
-	font-size: 8px;
+	font-size: 10px;
 }
 
 button:hover {
-	background-color: #269BFA;
-	border-color: #269BFA;
+	background-color: #269BFA; 
+	border-color: #269BFA; 
 	cursor: pointer;
+	/* Implement black border for selection? */ 
 
 	-webkit-transform: scale(1.05,1.07);
 	-webkit-transition-timing-function: ease-out;
@@ -90,14 +105,13 @@ button:hover {
 	-moz-transition-timing-function: ease-out;
 	-moz-transition-duration: 250ms;
 }
-.member-container {
+
+#member-container {
 	display: inline;
+
 }
 
 .member {
 	/*padding-top: 5px;*/
 	/*display: flex; */
-	/*margin-bottom: 10px; */
-	height: 25px;
-	width: 50px;
 }
