--- a/public/style.css
+++ b/public/style.css
@@ -1,20 +1,18 @@
-.active{
-	background-color:red;
 
-}
 body{
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
 }
+
 .active{
 	background-color: #74D38F;
-
 }
+
 .pitch-area{
 	background-color: #F6FFF8;
 	flex-grow: 1;
-	
+
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
@@ -22,7 +20,7 @@ body{
 /*	flex-wrap: wrap;*/
 	align-items: stretch;
 	flex-wrap: wrap;
-	align-self: stretch;	
+	align-self: stretch;
 }
 
 .pitch-container{
@@ -35,7 +33,8 @@ body{
 	border-style: solid;
 	display: inline-block;
 	margin: 5px;
-	min-height: 80vh; 
+	min-height: 85vh;
+	height: auto;
 }
 .pitch{
 	background-color: red;
